<resources>
    <string name="app_name">云信</string>
    <string name="action_settings">完成</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="login_has_account">已有帐号？直接登录</string>
    <string name="done">完成</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="empty"></string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="search">搜索</string>
    <string name="remove">移除</string>
    <string name="add">添加</string>
    <string name="create">新建</string>
    <string name="without_content">暂无</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="menu">菜单</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="readed">已读</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_add">添加</string>
    <string name="tab_weixin">微信</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>
    <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_album">我的相册</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">发起群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>
    <string name="record_audio">按住 说话</string>
    <string name="record_audio_end">松开 结束</string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="recording_error">录音失败，请重试</string>
    <string name="recording_init_failed">初始化录音失败</string>
    <string name="recording_cancel">手指上滑，取消发送</string>
    <string name="timer_default">00:00</string>
    <string name="recording_cancel_tip">松开手指，取消发送</string>
    <string name="recording_max_time">录音达到最大时间，是否发送？</string>
    <string name="multiport_manager">多端登录管理</string>
    <string name="multiport_logout">下线</string>
    <string name="computer_version">云信电脑版</string>
    <string name="web_version">云信网页版</string>
    <string name="mobile_version">云信移动版</string>
    <string name="multiport_logging">正在使用</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>
    <string name="input_panel_photo">图 片</string>
    <string name="input_panel_video">视 频</string>
    <string name="input_panel_location">位 置</string>
    <string name="input_panel_take">拍 摄</string>
    <string name="im_choose_pic">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="repeat_download_message">重新下载?</string>
    <string name="repeat_send_has_blank">重 发</string>
    <string name="repeat_send_message">重发消息?</string>
    <string name="copy_has_blank">复 制</string>
    <string name="delete_has_blank">删 除</string>
    <string name="voice_to_text">转文字</string>
    <string name="main_msg_list_delete_chatting">删除该聊天</string>
    <string name="main_msg_list_sticky_on_top">置顶该聊天</string>
    <string name="main_msg_list_clear_sticky_on_top">取消置顶</string>
    <string name="save_to_device">保存到手机</string>
    <string name="picture_save_fail">图片保存失败</string>
    <string name="picture_save_to">图片已保存到手机</string>
    <string name="search_join_team">搜索加入群组</string>
    <string name="file_transfer_state_downloaded">已下载</string>
    <string name="file_transfer_state_undownload">未下载</string>
    <string name="trans_voice_failed">语音转化失败</string>
    <string name="team_invalid_tip">您已退出该群</string>
    <string name="team_send_message_not_allow">您已不在该群，不能发送消息</string>
    <string name="send">发送</string>
    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="rd_repeat">Repeat</string>
    <string name="rd_daily">Daily</string>
    <string name="rd_weekly">Weekly</string>
    <string name="rd_monthly">Monthly</string>
    <string name="rd_yearly">Yearly</string>
    <string name="rd_none">None</string>
    <string name="rd_every">Every</string>
    <string name="rd_day">day</string>
    <string name="rd_days">days</string>
    <string name="rd_week">week</string>
    <string name="rd_weeks">weeks</string>
    <string name="rd_month">month</string>
    <string name="rd_months">months</string>
    <string name="rd_year">year</string>
    <string name="rd_years">years</string>
    <string name="rd_forever">Forever</string>
    <string name="rd_until">Until</string>
    <string name="rd_until_full">Until a date</string>
    <string name="rd_for">For</string>
    <string name="rd_for_full">For a number of events</string>
    <string name="rd_month_same_day">on the same day each month</string>
    <string name="rd_month_last">on every last %s</string>
    <string name="rd_month_first">on every first %s</string>
    <string name="rd_month_second">on every second %s</string>
    <string name="rd_month_third">on every third %s</string>
    <string name="rd_month_fourth">on every fourth %s</string>
    <string name="rd_event">event</string>
    <string name="rd_events">events</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="dynamic_expression">[Dynamic expression]</string>
    <string name="voice_prefix">[Voice]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="video_call">[Video call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="ease_user_remove">This user has been removed</string>
    <string name="set">Settings</string>
    <string name="notify">New message notification</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="shake">Shake</string>
    <string name="chatset">Chat settings</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="book_black">Black list</string>
    <string name="session">Conversation</string>
    <string name="address_book">Address book</string>
    <string name="setting">Settings</string>
    <string name="now_refresh_list">Refreshing contact list</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="save_new_nickname">Save new nickname</string>
    <string name="group_chat">Group chat</string>
    <string name="add_friend">Add friends</string>
    <string name="black_item">Black list</string>
    <string name="diagnose">Diagnose</string>
    <string name="push_nick">IOS offline push nick</string>
    <string name="Current_version">Current version</string>
    <string name="Not_Set">Not set</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="group_name">Group name</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Open_group_chat">Public group</string>
    <string name="blacklist">Black list</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
    <string name="Shielding_of_the_message">Block message</string>
    <string name="Select_the_contact">Select the contact</string>
    <string name="Group_chat_information">The group description</string>
    <string name="Group_of_Lord">The group owner</string>
    <string name="Introduction">Brief</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="user_name">User name</string>
</resources>