<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="59dp"
                android:background="@mipmap/ic_stat_notify_msg"
                android:contentDescription="" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="74dp">

                <LinearLayout
                    android:id="@+id/login_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.rey.material.widget.EditText
                        android:id="@+id/edit_login_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/edittext_white_normal"
                        android:drawableLeft="@mipmap/user_account_icon"
                        android:drawablePadding="15dp"
                        android:hint="@string/login_hint_account"
                        android:padding="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_white_66ffffff"
                        android:textSize="15sp"
                        app:et_inputId="@+id/textfield_et_label_input"
                        app:et_supportMode="none"
                        app:v_styleId="@array/edittext" />

                    <com.rey.material.widget.EditText
                        android:id="@+id/edit_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/edittext_white_normal"
                        android:drawableLeft="@mipmap/user_pwd_lock_icon"
                        android:drawablePadding="15dp"
                        android:hint="@string/login_hint_password"
                        android:inputType="textPassword"
                        android:longClickable="false"
                        android:padding="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_white_66ffffff"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.rey.material.widget.EditText
                        android:id="@+id/edit_register_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/edittext_white_normal"
                        android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:drawableLeft="@mipmap/user_account_icon"
                        android:drawablePadding="15dp"
                        android:hint="@string/input_account"
                        android:inputType="text"
                        android:padding="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_white_66ffffff"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />

                    <com.rey.material.widget.EditText
                        android:id="@+id/edit_register_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/edittext_white_normal"
                        android:drawableLeft="@mipmap/nick_name_icon"
                        android:drawablePadding="15dp"
                        android:hint="@string/input_nickname"
                        android:inputType="text"
                        android:padding="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_white_66ffffff"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />

                    <com.rey.material.widget.EditText
                        android:id="@+id/edit_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/edittext_white_normal"
                        android:drawableLeft="@mipmap/user_pwd_lock_icon"
                        android:drawablePadding="15dp"
                        android:hint="@string/input_password"
                        android:inputType="textPassword"
                        android:longClickable="false"
                        android:padding="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/color_white_66ffffff"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/register_login_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:padding="15dip"
                android:text="@string/register"
                android:textColor="@drawable/register_tip_selector"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>